--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "node-sample",
-  "description": "Our sample Node to Heroku app",
-  "main": "server.js",
+  "name": "benjbox",
+  "description": "Benjbox game",
+  "main": "main.js",
   "scripts": {
     "start": "node server.js"
   },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
   "dependencies": {
     "ejs": "^1.0.0",
     "express": "^4.9.8"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
