--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Benjbox game",
   "main": "app.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "keywords": [
     "example",
