--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   ],
   "dependencies": {
     "ejs": "^1.0.0",
-    "express": "^4.9.8"
+    "express": "^4.9.8",
+    "express-session": "^1.17.2",
+    "express-sessions": "^1.0.6",
+    "react": "^17.0.2"
   },
   "engines": {
     "node": "14.x"
