--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "description": "Benjbox game",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon .",
+    "test": "standard"
   },
   "keywords": [
     "example",
@@ -11,9 +12,12 @@
   ],
   "dependencies": {
     "ejs": "^1.0.0",
-    "express": "^4.9.8",
+    "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-sessions": "^1.0.6",
+    "firebase": "^8.6.2",
+    "firebase-admin": "^9.8.0",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2"
   },
   "engines": {
